fixed dark mode on schdeulePage Split.js gutters

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -10,6 +10,13 @@
   box-sizing: border-box;
 }
 
+html {
+  background-color: white;
+}
+html.dark {
+  background-color: #222;
+}
+
 a {
   cursor: pointer;
 }
