--- a/client/src/index.css
+++ b/client/src/index.css
@@ -15,10 +15,3 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
-
-html {
-  background-color: white;
-}
-html.dark {
-  background-color: #222;
-}
